@@ -2,14 +2,13 @@ package com.kts.taxify.services.notification;
 
 import com.kts.taxify.converter.NotificationConverter;
 import com.kts.taxify.dto.response.NotificationResponse;
+import com.kts.taxify.model.User;
 import com.kts.taxify.repository.NotificationRepository;
 import com.kts.taxify.services.auth.GetSelf;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -22,15 +21,22 @@ public class GetPassengerNotifications {
 
 	private final GetSelf getSelf;
 
-	public Collection<NotificationResponse> execute() {
+	private final MarkNotificationAsRead markNotificationAsRead;
+
+	public Collection<NotificationResponse> execute(boolean notificationsAreRead) {
+
 		List<NotificationResponse> passengerNotifications = new ArrayList<>();
 		notificationRepository.findAll().forEach(notification -> {
-			if (notification.getRecipients().stream().map(recipient -> recipient.getEmail()).collect(Collectors.toList())
-				.contains(getSelf.execute().getEmail())) {
+			List<String> recipientsEmails = notification.getRecipients().stream().map(User::getEmail).toList();
+			if (recipientsEmails.contains(getSelf.execute().getEmail())) {
+				if (notificationsAreRead) {
+					markNotificationAsRead.execute(notification);
+				}
 				passengerNotifications.add(NotificationConverter.toNotificationResponse(notification));
 			}
+
 		});
-		Collections.sort(passengerNotifications, (not1, not2) -> not2.getArrivalTime().compareTo(not1.getArrivalTime()));
+		passengerNotifications.sort((not1, not2) -> not2.getArrivalTime().compareTo(not1.getArrivalTime()));
 		return passengerNotifications;
 	}
 }
